fix: wrong color on links in code

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -99,4 +99,8 @@
     }
 */
     max-width: 90%;
+    code a {
+        text-decoration: none;
+        color: unset;
+    }
 }
